# websocket

./: CMakeLists.txt  README.md
.cache/clangd/index/: aes.c.1805AEDEB975FCF2.idx  aes.h.DF967F9ED9B17C85.idx  aesce.c.9A33BB52D23527CD.idx  aesce.h.C1900F321B6251B3.idx  aesni.c.237E4AED242DDD06.idx  aesni.h.1F4F56A594B757DA.idx  alignment.h.31BF3A5A41CA5EE4.idx  aria.c.CC4DB4ACA7A97122.idx  aria.h.C9204C3F5D8BA1F9.idx  asn1.h.17FBBDCC03507464.idx  asn1parse.c.E44F8834F2EE6A5C.idx  asn1write.c.11CAB86C41C7E1EC.idx  asn1write.h.CDA800708D1E0855.idx  base64.c.4FA2406A78C70D2C.idx  base64.h.87B7DF2F5EB9D203.idx  bignum.c.5DB64E96DC6E8C20.idx  bignum.h.B6AF01667726C414.idx  bignum_core.c.21D8E8259FE00156.idx  bignum_core.h.297224C633ABBFE4.idx  bignum_mod.c.7DAC002CAE88C71D.idx  bignum_mod.h.EB04F237E485C5D0.idx  bignum_mod_raw.c.5BE349612E4471B4.idx  bignum_mod_raw.h.1AF4A90E1C41FDE7.idx  bignum_mod_raw_invasive.h.81B7CBB397AC00E9.idx  bn_mul.h.EA72AA47BD22CCD2.idx  build_info.h.403090863877C175.idx  build_info.h.B4D274924F243FA1.idx  camellia.c.044750D12FFDA0A5.idx  camellia.h.D113792227942A62.idx  ccm.c.C576740E4342576B.idx  ccm.h.B54202ED3269D58A.idx  chacha20.c.F629490A9F88CB9D.idx  chacha20.h.46C03BF3AFBD18D6.idx  chachapoly.c.3724088B46C32EFD.idx  chachapoly.h.4A01C05E3E856AD0.idx  check_config.h.F9AD76BF3EBA6909.idx  cipher.c.B44209DC00E3BCAD.idx  cipher.h.D067A6EA3117104F.idx  cipher_wrap.c.3C13380906C0FDBC.idx  cipher_wrap.h.486CC4027B2B5072.idx  (+200 more)
cmake/: cross-compile.cmake
cmake/arch/: cortex-m7_gcc.cmake
cmake/toolchain/: arm-none-eabi-gcc.cmake
core/: CMakeLists.txt
core/inc/: websocket.h  websocket_list.h  websocket_service.h
core/port/: websocket_port.c
core/src/: websocket.c  websocket_service.c
crypt/: CMakeLists.txt
crypt/mbedtls/: CMakeLists.txt
crypt/mbedtls/include/mbedtls/: mbedtls_config.h
crypt/mbedtls/ports/inc/: tls_certificate.h  tls_client.h
crypt/mbedtls/ports/src/: tls_certificate.c  tls_client.c
crypt/tinycrypt/: CMakeLists.txt
crypt/tinycrypt/include/: tiny_aes.h  tiny_bignum.h  tiny_des.h  tiny_rc4.h  tiny_sha512.h  tinycrypt.h  tinycrypt_config.h
crypt/tinycrypt/src/: tiny_aes.c  tiny_bignum.c  tiny_des.c  tiny_rc4.c  tiny_sha512.c
inc/: websocket.h  websocket_async.h  websocket_service.h
sample/: CMakeLists.txt  main.c
sample/hello-server/: CMakeLists.txt  main.c
src/: CMakeLists.txt  websocket.c  websocket_async.c  websocket_service.c
src/include/: websocket.h
src/websocket/: websocket.c  websocket_service.c
tests/: CMakeLists.txt
tests/websocket_connect_test/: CMakeLists.txt  test.cpp
tests/websocket_connect_test/benchmark/: benchkmark.cpp  connect_benchmark.cpp
tests/websocket_disconnect_test/: CMakeLists.txt  test.cpp
